# smart-execution

./: .gitignore  CODEX_LOG.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
docs/: limit_order_fill_simulator_plan.md  research_execution_master_plan.md
frontend/: index.html  package-lock.json  package.json
reports/: adaptive_child_orders_SPY_5d_5m.csv  alignment_report_multi.csv  backtest_results_SPY_5d_5m.csv  backtest_results_multi.csv  backtest_results_sample.csv  backtest_summary_SPY_5d_5m.csv  backtest_summary_by_strategy_multi.csv  backtest_summary_by_ticker_multi.csv  backtest_summary_by_ticker_strategy_multi.csv  execution_grid_fills.csv  execution_grid_results.csv  execution_grid_summary_by_placement.csv  execution_grid_summary_by_strategy.csv  execution_grid_summary_by_strategy_placement.csv  execution_summary_by_timestamp_multi.csv  execution_tape_multi.csv  parent_orders_SPY_5d_5m.csv  pov_child_orders_SPY_5d_5m.csv  signal_decay_SPY_5d_5m.csv  signal_evaluation_SPY_5d_5m.csv  signal_notes_SPY_5d_5m.md  signal_summary_SPY_5d_5m.csv  strategy_schedule_comparison_SPY_5d_5m.csv  tca_fills_SPY_5d_5m.csv  tca_metrics_SPY_5d_5m.csv  twap_child_orders_SPY_5d_5m.csv  vwap_child_orders_SPY_5d_5m.csv
src/: __init__.py  alpha_dataset.py  alpha_evaluation.py  alpha_models_linear.py  alpha_models_tree.py  alpha_split.py  api.py  backtester.py  calendar_spreads.py  data_loader.py  dataset_metadata.py  execution.py  features.py  fill_simulator.py  futures_math.py  futures_roll.py  futures_sessions.py  futures_tca.py  instruments.py  lob_events.py  (+28 more)
(+67 files in other folders)
